# ChangeLog for sys-apps/attr
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.109 2008/12/16 17:56:50 jer Exp $

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> attr-2.4.41.ebuild:
  Stable for HPPA (bug #235014).

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> attr-2.4.41.ebuild:
  ia64 stable wrt #235014

  24 Aug 2008; Tobias Klausmann <klausman@gentoo.org> attr-2.4.41.ebuild:
  Stable on alpha, bug #235014

  19 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> attr-2.4.41.ebuild:
  Stable on sparc, bug #235014

  18 Aug 2008; Brent Baude <ranger@gentoo.org> attr-2.4.41.ebuild:
  stable ppc64, bug 235014

  18 Aug 2008; Brent Baude <ranger@gentoo.org> attr-2.4.41.ebuild:
  stable ppc, bug 235014

  17 Aug 2008; Markus Meier <maekke@gentoo.org> attr-2.4.41.ebuild:
  amd64/x86 stable, bug #235014

*attr-2.4.43 (17 Aug 2008)

  17 Aug 2008; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.43-linguas.patch, +attr-2.4.43.ebuild:
  Version bump #231274 by Conrad Kostecki.

*attr-2.4.41 (23 Feb 2008)

  23 Feb 2008; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.39-linguas.patch, attr-2.4.39.ebuild, +attr-2.4.41.ebuild:
  Make sure we respect LINGUAS #205952 by Arvid Norlander and version bump
  #211113.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> attr-2.4.39.ebuild:
  Stable on mips, per #197204.

  02 Nov 2007; Steve Dibb <beandog@gentoo.org> attr-2.4.39.ebuild:
  amd64 stable, bug 197204

  31 Oct 2007; Jeroen Roovers <jer@gentoo.org> attr-2.4.39.ebuild:
  Stable for HPPA (bug #197204).

  30 Oct 2007; nixnut <nixnut@gentoo.org> attr-2.4.39.ebuild:
  Stable on ppc wrt bug 197204

  29 Oct 2007; Raúl Porcel <armin76@gentoo.org> attr-2.4.39.ebuild:
  ia64 stable wrt #197204

  28 Oct 2007; Ferris McCormick <fmccor@gentoo.org> attr-2.4.39.ebuild:
  Sparc stable --- Bug #197204

  28 Oct 2007; Jose Luis Rivero <yoswink@gentoo.org> attr-2.4.39.ebuild: