@@ -6,7 +6,7 @@ AUX attr-2.4.41-no-static-paths.patch 2636 RMD160 673a2343d95b6980aaaaa36923f0d9
 AUX attr-2.4.43-linguas.patch 249 RMD160 93920b4d51a1d8033b1d89d5db11729c1ae4b14f SHA1 49a8465de5e968fff9f14ed5d72d32acd2e98746 SHA256 5012fe8ebce0a23de74ad0803476ebcf7d492e11295596ae164da6baad3323e9
 DIST attr_2.4.41-1.tar.gz 114120 RMD160 4cd1e48a329617d6913908d5cf6943385ef38c4b SHA1 868d1629ebe034c381ca221cdb5f45f71b1bf392 SHA256 f799cf17f9722ed3f9cc5b90a090f64ba4da7421e971a3981280e48d9e418235
 DIST attr_2.4.43-1.tar.gz 116991 RMD160 23afbe0fe7104b2fdf4dc62a741263634e405b96 SHA1 9ec8edacecaa37423dba042ba16fdb045a8ba002 SHA256 d358b233b3e2ad235e63fd8697e337006fc7506844e424b0d9dd7a24affec5bf
-EBUILD attr-2.4.41.ebuild 2129 RMD160 a785d68314e618afc23668f3c678da31f6c5bd4f SHA1 bd50819f9ea7eaf53365e809b34f00130d89c1e2 SHA256 408e902fb33d052eb39e4b231b27301c29150351304885e3361007e1aa09ca56
-EBUILD attr-2.4.43.ebuild 2135 RMD160 5fe7f94a9342efadf353567b5579d1113f94dece SHA1 b083a14881ebe3cf739c7f6c29a6749f72ba02bb SHA256 52de3820f74c3cc754bcb69fe511e5c8500415c24729d7d91b313d79684548ae
-MISC ChangeLog 13953 RMD160 771f716b89f38b290f61aaf6141e1cf345749db8 SHA1 54822df4922fc0bc8c06f712eafc52a22994d7e2 SHA256 2028defad18f63b8d0d9ec5a1718ec8cff92b296ff7b48e788ce27399f77290b
+EBUILD attr-2.4.41.ebuild 2116 RMD160 61973002ee1ec203a3082d0e1e6f86340f9dcf20 SHA1 8fa2cf5a79ca18f479e054a1d82de45699e6c9ac SHA256 c7e7c845d37162af9b3aa8f502aab41b7ba0803f006da5e73b20455419dc0d34
+EBUILD attr-2.4.43.ebuild 2121 RMD160 60ae2c7c6a93a0e79fb52b234c41e5b74ac23d0b SHA1 ae0b2616b31d7afb7a48196dea3bb13e7c35ecb1 SHA256 7c723257c8699d5155318482ca039478cb7c4bc27e8c4cb2dde1761b53dd0b11
+MISC ChangeLog 14179 RMD160 d60a3078f625b47ba1d42667d26952730104ef27 SHA1 6a9973a5a8789fb376f56b392cd0d464356e4290 SHA256 833ade5c07a1cf283de6bf08342352f3c9186570dc9056f783ed8d292bd65cc7
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
