@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/attr
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.109 2008/12/16 17:56:50 jer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.111 2009/02/19 18:45:08 tgall Exp $
+
+  19 Feb 2009; Tom Gall <tgall@gentoo.org> attr-2.4.43.ebuild:
+  stable on ppc64, bug #259431
+
+  18 Feb 2009; Ferris McCormick <fmccor@gentoo.org> attr-2.4.43.ebuild:
+  Sparc stable, Bug #259431 (been around 6 months now).
 
   16 Dec 2008; Jeroen Roovers <jer@gentoo.org> attr-2.4.41.ebuild:
   Stable for HPPA (bug #235014).
